--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="intro">
             <p id="hello">Hey there,</p>
             <span id="self">
-                I am <span id="name">Aditya Mallick</span>
+                I am <div class="typewriter" id="name">Aditya Mallick</div>
             </span>
             <p id="prof">WEB DEVELOPER</p>
 
@@ -93,7 +93,7 @@
 
     </section>
 
-    <!-- <hr style="max-width: 90vw;"> -->
+    <hr style="max-width: 90vw;">
 
     <section id="projects" style="margin-bottom:50px;">
         <div class="project">
@@ -173,9 +173,12 @@
     <br>
 
     <section id="two">
-        <div class="skdisplay">
         <div class="skills">
             <H2>SKILLS</H2>
+        </div>
+
+        <div class="skdisplay">
+        <div class="skills">
         </div>
 
 
@@ -222,11 +225,11 @@
             <div class="skillIcons" style="display: flex; justify-content:center">
                 <div class="skillInside">
                     <img src="../images/django.svg" alt="Python">
-                    <span class="skillName"><span class="green"></span>DJANGO</span>
+                    <span class="skillName"></span>DJANGO</span>
                 </div>
                 <div class="skillInside">
                     <img src="../images/numpy-svgrepo-com.svg" alt="NumPy">
-                    <span class="skillName"><span class="yellow"></span>NUMPY</span>
+                    <span class="skillName"></span>NUMPY</span>
                 </div>
 
             </div>
@@ -269,7 +272,7 @@
 
         <div class="exdisplay">
             <div class="ex-content">
-                <!-- <img src="../pro_images/search--v4.png" alt="Logo" class="card-logo"> -->
+                <img src="../pro_images/search--v4.png" alt="Logo" style="width:200px">
                 <p class="ex-text">
                     No formal experience yet,<br>
                     I'm actively looking for opportunities
