--- a/index.html
+++ b/index.html
@@ -102,15 +102,13 @@
 
         <div class="prdisplay">
 
-            <div class="spacer-card"></div>
-
-           
-
+        <div class="spacer-card"></div>
             <div class="projectcard" id="to-do-list">
                 <div class="card-image-container">
                     <img src="../pro_images/Screenshot 2025-06-27 123357.png" alt="project image" class="card-image">
                     <div class="card-overlay">
-                        <a href="https://to-do-list-gamma-seven-88.vercel.app/" target="blank"><button class="view-demo-btn">Visit
+                        <a href="https://to-do-list-gamma-seven-88.vercel.app/" target="blank"><button
+                                class="view-demo-btn">Visit
                                 ↗️</button></a>
                         <a href="https://github.com/Adittyaaa-codes/To-Do-List" target="blank"><button
                                 class="view-code-btn">View Code</button></a>
@@ -129,7 +127,7 @@
                 </div>
             </div>
 
-             <div class="projectcard">
+            <div class="projectcard">
                 <div class="card-image-container">
                     <img src="../pro_images/Screenshot 2025-06-13 124801.png" alt="project image" class="card-image">
                     <div class="card-overlay">
@@ -180,8 +178,8 @@
         </div>
 
         <div class="skdisplay">
-        <div class="skills">
-        </div>
+            <div class="skills">
+            </div>
 
 
             <h2 style="text-align:center ; color:antiquewhite;">TECHNICAL LANGUAGES</h2>
@@ -264,7 +262,7 @@
     </section>
 
 
-    
+
 
 
     <section id="four">
