--- a/starry.html
+++ b/starry.html
@@ -7,6 +7,7 @@
     html, body {
       margin: 0; padding: 0; overflow: hidden; height: 100%;
       background: #000; /* fallback black */
+      color:white;
     }
     canvas {
       position: fixed;
@@ -139,5 +140,6 @@
     resizeCanvas();
     animate();
   </script>
+
 </body>
 </html>
